--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "dependencies": {
     "@cap-js-community/odata-v2-adapter": "^1.14.3",
     "@sap/cds": "^8",
-    "express": "^4"
+    "express": "^4",
+    "@cap-js/hana": "^1"
   },
   "devDependencies": {
     "@cap-js/cds-types": "^0.9.0",
-    "@cap-js/sqlite": "^1"
+    "@cap-js/sqlite": "^1",
+    "@sap/cds-dk": "^8"
   },
   "scripts": {
     "start": "cds-serve",
@@ -22,5 +24,10 @@
   "sapux": [
     "app/manage_products",
     "app/managepurchaseorder"
-  ]
+  ],
+  "cds": {
+    "sql": {
+      "native_hana_associations": false
+    }
+  }
 }
