--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@cap-js-community/odata-v2-adapter": "^1.14.3",
     "@sap/cds": "^8",
     "express": "^4",
-    "@cap-js/hana": "^1"
+    "@cap-js/hana": "^1",
+    "@sap/xssec": "^4"
   },
   "devDependencies": {
     "@cap-js/cds-types": "^0.9.0",
@@ -28,6 +29,9 @@
   "cds": {
     "sql": {
       "native_hana_associations": false
+    },
+    "requires": {
+      "auth": "xsuaa"
     }
   }
 }
